--- a/README
+++ b/README
@@ -1,3 +1,16 @@
+2.0 (7 March 2006)
+  - Removed SearchT and ContT (because I never use them, 
+    and their implementations were too complicated).
+  - Refactored the monad prelude: methods have different names,
+    and there are some new classes making the features more modular.
+  - Added a new combinator 'ifM', 
+    and implemented a few of the others with it.
+  - This should be a more or less stable version.  The only changes I
+    anticipate in the future:
+    - bug fixes (hopefully few)
+    - performance tuning (tweaks to balance laziness with memory leaks)
+
+
 1.5 (24 Jan 2006)
   - New monadic combinators: andM, orM 
 
@@ -9,7 +22,7 @@
   - Removed the monads (too much to maintain, little use?), just left the 
     transformers.  The monads can be obtained by transforming the
     monad, e.g. Reader = ReaderT Id
-  - Much imprved Examples directory
+  - Much improved Examples directory
   - Some changes to strictness behavior. Guiding principle: 
     we are strict in internal structures, 
     (e.g., pair for the state and result), but not in the values 
@@ -36,7 +49,7 @@
 1.3 (20 March 2005):
   - Added a class 'ForEach' to the Monad.Prelude.
     It is used to apply a monadic function to all elements in a container.
-    It is like the 'fmapM' combinator added recently to the hirarchical
+    It is like the 'fmapM' combinator added recently to the hierarchical
     libraries, but the arguments are the other way around.
 
 1.2.3 (17 March 2005):
@@ -53,7 +66,7 @@
     monad library and should be moved somewhere else.
   - Changed the interface to Writer monads to be more like it used to be in mtl.
     In 'Writer w a', the type variable 'w' is the type of the whole buffer,
-    not just the elemnets of the buffer.  We do not use the Monoid class 
+    not just the elements of the buffer.  We do not use the Monoid class 
     currently available in the library, as it is too inconvenient.  Instead
     we use the Monoid type (see the above change).
 
