Adjusts the wording in the CHANGES file.
darcs-hash:20070916202244-9637d-852bbc705cefe50ec0e0856558899aab4dd8ae32.gz

--- a/CHANGES
+++ b/CHANGES
@@ -4,4 +4,5 @@ Version 3.3.0
   Simplifies the library without loosing functionality.
   It seems that we can get the same behavior by just using 'get' and 'set'.
 
-* Add functions to derive the methods in the library for isomorphic types.
+* Add functions that use a monad morphism to "derive" implementations
+  of most of the funcitons in the library.
