Add `MonadFail` instances for the transformers (and clean up some warnings)
The transformers do not provide failing behavior compatible with
`MonadFail` so they just pass on the behavior to the underlying monad,
in the same way the `fail` from the `Monad` class does.

Fixes #4.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 3.0
+  * Add instane from `MonadFail`---none of the transformers implement this
+    functionality so the implementation just lifts things.
+
 Version 3.8
   * Added `WithBase`
 
